# flecs-template-meson

./: README  get_deps.sh  meson.build
src/: main.c  meson.build
